# nokov

./: README.md
nokov_ros/: CMakeLists.txt  myrun.sh  package.xml
nokov_ros/include/: cortex.h  m3x3.h
nokov_ros/src/: clienttest.cpp  cortex.cpp  cortex_socket.cpp  m3x3.cpp
